# ratel-core

base-lib-allcommon/src/main/java/com/virjar/ratel/allcommon/: Constants.java
container-runtime-repkg/src/main/cpp/: CMakeLists.txt
container-runtime-repkg/src/main/cpp/zipalign/: ZipAlign.cpp  ZipAlignLog.h  ZipEntry.cpp  ZipFile.cpp
container-runtime-repkg/src/main/cpp/zipalign/base/: liblog_symbols.cpp  liblog_symbols.h  logging.cpp  logging_splitters.h  properties.cpp  utf8.cpp
container-runtime-repkg/src/main/cpp/zipalign/base/include/android-base/: unique_fd.h
container-runtime-repkg/src/main/cpp/zipalign/utils/: SharedBuffer.cpp  Vector.h  VectorImpl.cpp
container-runtime-repkg/src/main/cpp/zipalign/ziparchive/: zip_archive.cc  zip_archive.h  zip_archive_stream_entry.cc  zip_writer.cc  zip_writer.h
container-runtime-repkg/src/main/java/com/virjar/ratel/runtime/: HotModuleManager.java
container-runtime-repkg/src/main/java/com/virjar/ratel/runtime/fixer/pm/: PackageParserEx.java
ratelmanager/src/main/java/com/virjar/ratel/manager/ui/: SettingsActivity.java
script/: create-dist.sh
